--- a/src/android/ACPCore_Cordova.gradle
+++ b/src/android/ACPCore_Cordova.gradle
@@ -1,4 +1,8 @@
 dependencies {
     // adobe
     api 'com.adobe.marketing.mobile:sdk-core:[1.5.3,)'
+
+    implementation platform('com.adobe.marketing.mobile:sdk-bom:3.2.2')
+    implementation 'com.adobe.marketing.mobile:core'
+    implementation 'com.adobe.marketing.mobile:identity'
 }
